chore: auth & add ongoing_project api
